2009-12-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that if --without-sqlite3 is given, pkg-config is
	not properly used in configure script and failed to detect gnutls.
	This is because explicit call of PKG_PROG_PKG_CONFIG is missing
	and the initialization of pkg-config is done in first occurrence
	of PKG_CHECK_MODULES which is not executed because it is inside of
	sqlite3.m4. Added explicit PKG_PROG_PKG_CONFIG call.
	* configure.ac

2009-12-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.7.2

2009-12-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that RequestGroupMan::downloadFinished() returns
	true even if all downloads haven't finished, especially when
	PostDownloadHandler is involved. Changed the condition so that it
	only returns true if both _requestGroups and _reservedGroups are
	empty.
	* src/RequestGroupMan.cc

2009-12-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Log listening port for BitTorrent/DHT in notice level.
	* src/DHTConnectionImpl.cc
	* src/PeerListenCommand.cc

2009-12-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2009-12-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.7.2
	* configure.ac

2009-12-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed default value of --enable-dht from 'false' to 'true'.
	* doc/aria2c.1.txt

2009-12-11  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Enabled DHT by default because of Magnet URI support. To disable
	DHT, use --enable-dht=false
	* src/OptionHandlerFactory.cc

2009-12-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Print Magnet URI in -S output.
	* src/AnnounceList.cc
	* src/bittorrent_helper.cc
	* src/bittorrent_helper.h
	* test/BittorrentHelperTest.cc

2009-12-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
